style.css
@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap');

.main {
  position: absolute;
  left: 8%;
  top: 0;
  width: 82%;
  padding-top: 10%;
  font-size: 5vw;
  font-family: 'Roboto Condensed', sans-serif;
}

.main.pc {
  position: absolute !important;
  left: 24% !important;
  top: 0 !important;
  width: 75% !important;
  padding-top: 5% !important;
  font-size: 2vw !important;
  font-family: 'Roboto Condensed', sans-serif !important;
}

body {
  width: 100%;
  background-color: #ADE8F4;
}

.sidebar {
  position: fixed;
  top: 0;
  left: -100%;
  width: 0%;
  height: 100%;
  transition: width, 0.5s linear;
  background-color: #007FE0;
  color: #FFFFFF;
  z-index: -1;
  padding: 0%;
  padding-top: 14%;
  font-size: 5vw;
}

.sidebar.open {
  z-index: 4;
  top: 0;
  left: 0;
  width: 100%;
  padding: 5%;
  padding-top: 14%;
}

.sidebar.pc {
  position: fixed !important;
  top: 0 !important;
  height: 100% !important;
  transition: width, 0.5s linear !important;
  background-color: #007FE0 !important;
  color: #FFFFFF !important;
  z-index: -1 !important;
  font-size: 5vw !important;
  z-index: 4 !important;
  top: 0 !important;
  left: 0 !important;
  width: 20% !important;
  padding: 1% !important;
}

.menu-button {
  top: 1vw;
  left: 1vw;
  width: 10vw;
  height: 10vw;
  border-radius: 15%;
  border: none;
  z-index: 5;
  position: fixed;
  font-size: 6vw;
  text-align: center;
  padding: 1vw 1vh 1vw 1vh;
  background-color: #FFFFFF;
}

button {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  font-family: 'Roboto Condensed', sans-serif;
}

.main button {
  border-color: #000000;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  font-family: 'Roboto Condensed', sans-serif;
  font-size: 5vw;
  background: #00B4D8;
  color: #FFFFFF;
  border-width: 1vw;
  padding: 2%;
}

input["type"="button"] {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.sidebar input {
  border: none;
  font-size: 5vw;
  background: #00B4D8;
  color: #FFFFFF;
  width: 0vw;
  height: 9vw;
  margin-bottom: -4%;
  left: 1vw;
  width: 0;
  transition: width, 0.5s linear;
  font-family: 'Roboto Condensed', sans-serif;
}

.sidebar.open input {
  width: 89vw;
}

.sidebar input.pc {
  border: none !important;
  font-size: 30% !important;
  background: #00B4D8 !important;
  color: #FFFFFF !important;
  height: 5vw !important;
  transition: width, 0.2s linear !important;
  width: 100% !important;
  text-align: center !important;
}

.sidebar input.pc:hover {
  height: 5vw !important;
  font-size: 35% !important;
  background: #00accf !important;
}

.main.pc div button {
  border: none !important;
  font-size: 70% !important;
  background: #00B4D8 !important;
  color: #FFFFFF !important;
  transition: width, 0.2s linear !important;
  width: 30% !important;
  text-align: center !important;
}

.main.pc div button:hover {
  font-size: 75% !important;
  background: #00accf !important;
}



.hidden-item {
  border-color: #000000;
  font-size: 5vw;
  padding: 2%;
  background: #00B4D8;
  color: #FFFFFF;
  border-width: 1vw;
  transition: display;
  display: none;
}

.hidden-item.shown {
  display: block;
}

.pc .hidden-item {
  border-color: #000000;
  font-size: 70% !important;
  padding: 2%;
  background: #00B4D8;
  color: #FFFFFF;
  border-width: 1vw;
  transition: display;
  display: none;
}

.pc .hidden-item.shown {
  display: block;
}



select {
  background-color:#1F99CD;
  background-image: url("data:image/svg+xml;charset=US-ASCII,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%20256%20448%22%20enable-background%3D%22new%200%200%20256%20448%22%3E%3Cstyle%20type%3D%22text%2Fcss%22%3E.arrow%7Bfill%3A@{arrow}%3B%7D%3C%2Fstyle%3E%3Cpath%20class%3D%22arrow%22%20d%3D%22M255.9%20168c0-4.2-1.6-7.9-4.8-11.2-3.2-3.2-6.9-4.8-11.2-4.8H16c-4.2%200-7.9%201.6-11.2%204.8S0%20163.8%200%20168c0%204.4%201.6%208.2%204.8%2011.4l112%20112c3.1%203.1%206.8%204.6%2011.2%204.6%204.4%200%208.2-1.5%2011.4-4.6l112-112c3-3.2%204.5-7%204.5-11.4z%22%2F%3E%3C%2Fsvg%3E%0A");
  background-position: right 10px center;
  background-repeat: no-repeat;
  background-size: auto 50%;
  border-radius:2px;
  border:none;
  color: #ffffff;
  padding: 10px 30px 10px 10px;
  outline: none;
  -moz-appearance: none;
  -webkit-appearance: none;
  appearance: none;
  &::-ms-expand { display: none };
  font-family: 'Roboto Condensed', sans-serif;
}

@-moz-document url-prefix() {
  select {
    color: rgba(0,0,0,0);
    text-shadow: 0 0 0 #ffffff;
  }
}

#discountWrapper {
  height:5vh;
  background-color: #ec3c3c;
  color: #FFFFFF;
  padding: 1%;
  text-align: center;
  margin: 1%;
  font-family: 'Roboto Condensed', sans-serif;
}

